--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="#services">Services</a>
                 <a href="#project">Projects</a>
                 <a href="#contact">Contact</a>
+                <a href="#contact">Exam</a>
                
         </ul>
 
